Enable disable static hostname (#23)
* In the template collectd.conf.j2 verify if the FQDNLookup is true. If not then create a static hostname.

* Added variable to set static hostname

--- a/templates/etc/collectd/collectd.conf.j2
+++ b/templates/etc/collectd/collectd.conf.j2
@@ -7,7 +7,9 @@
 # Global settings for the daemon.                                            #
 ##############################################################################
 
+{% if (collectd_static_hostname == 'true') %}
 Hostname "{{ collectd_hostname }}"
+{% endif %}
 FQDNLookup {{ collectd_fqdn_lookup }}
 BaseDir "{{ collectd_base_dir }}"
 PluginDir "{{ collectd_plugin_dir }}"
