update molecule to 2.20.1 Fix ansible_managed syntax

--- a/templates/etc/collectd/auth.db.j2
+++ b/templates/etc/collectd/auth.db.j2
@@ -1,4 +1,4 @@
-# {{ ansible_managed }}
+{{ ansible_managed | comment }}
 
 {% for username, password in collectd_network_server_auth_data.items() %}
 {{ username }}: {{ password }}
