--- a/templates/etc/collectd/collectd.conf.j2
+++ b/templates/etc/collectd/collectd.conf.j2
@@ -1,4 +1,4 @@
-# {{ ansible_managed }}
+{{ ansible_managed | comment }}
 # Config file for collectd(1).
 
 ##############################################################################
